--- a/app/src/main/res/layout/activity_employee_list.xml
+++ b/app/src/main/res/layout/activity_employee_list.xml
@@ -12,4 +12,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="TextView" />
+
+    <ListView
+        android:id="@+id/employeeLV"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </LinearLayout>
